Add image files

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
             </div>
             <div class="images-text">
                 <div class="combine">
-                    <img src="" alt="">
+                    <img src="./images/image.jpg" alt="">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="combine">
-                    <img src="" alt="">
+                    <img src="./images/image2.jpg" alt="">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="combine">
-                    <img src="" alt="">
+                    <img src="./images/image3.jpg" alt="">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="combine">
-                    <img src="" alt="">
+                    <img src="./images/image4.jpg" alt="">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
             </div>
