Edit header,images and text

--- a/index.html
+++ b/index.html
@@ -15,52 +15,51 @@
                 </div>
                 <div class="header-link">
                     <ul>
-                        <li>header link one</li>
-                        <li>header link two</li>
-                        <li>header link three</li>
+                        <li>Foods</li>
+                        <li>Decorations</li>
+                        <li>Events</li>
                     </ul>
                 </div>
             </div>
             <div class="top-low">
                 <div class="left-top">
                     <div class="title">
-                        This website is awesome
+                        Baby Ryuu's First Halloween
                     </div>
                     <div class="description">
-                        This website has some subtext 
-                        that goes here under the main title. 
-                        It's a smaller font and the color is
-                        lower contrast
+                        Baby Ryuu is a very strong baby, and though he was sick at the time,
+                         he was able to cooperate and not be isolated during the picture. 
+                         Happy Halloween!
                     </div>
-                    <button class="sign-up">
-                        Sign up
+                    <button class="cheer-up">
+                        Cheer up!
                     </button>
                 </div>
                 <div class="right-top">
-                    <img src="myfamily.jpg" alt="Family Picture">
+                    <img src="./images/header.jpg" alt="Family Picture">
                 </div>
             </div>
         </div>
         <div class="middle-high">
             <div class="mid-title">
-                Some random information.
+                Different kind of Ryuu.
             </div>
             <div class="images-text">
                 <div class="combine">
                     <img src="./images/image.jpg" alt="">
-                    <div>this is some subtext under an illustration or image</div>
+                    <div>The Mad</div>
                 </div>
                 <div class="combine">
                     <img src="./images/image2.jpg" alt="">
-                    <div>this is some subtext under an illustration or image</div>
+                    <div>The Tired</div>
                 </div>
                 <div class="combine">
                     <img src="./images/image3.jpg" alt="">
-                    <div>this is some subtext under an illustration or image</div>
+                    <div>The Focus</div>
                 </div>
                 <div class="combine">
                     <img src="./images/image4.jpg" alt="">
-                    <div>this is some subtext under an illustration or image</div>
+                    <div>The Curious</div>
                 </div>
             </div>
         </div>
