--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         </div>
         <div class="mid-mid">
             <div class="quote">
-                This is an inspiring quote, or a testimonial from a customer. 
-                Maybe it's just filling up space, or maybe people will actually read it.
-                Who knows? All I know is that it looks nice.
+                Make the best memories during his innocent days, 
+                because one day they think they know everything, 
+                and they will come back crying, asking for hugs and love.
             </div>
             <div class="author">
-                -Thor, God of Thunder
+                -Rex and Mary, Parents
             </div>
         </div>
         <div class="mid-lower">
