Edit class name

--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
         <div class="mid-lower">
             <div class="container">
                 <div class="container-low">
-                    <div class="big">Call to action! It's time!</div>
-                    <div class="small">Sign up for our product by clicking that button right 
-                                        over there!</div>
+                    <div class="big">Trick or Treat, Happy Halloween!</div>
+                    <div class="small">Click pumpkin to give treats!</div>
                 </div>
                 <div class="container-lower">
-                    <button class="sign-up-low">Sign-up</button>
+                    <button class="pumpkin">Pumpkin</button>
                 </div>
             </div>
         </div>
